# rust-prac

./: Cargo.toml
src/: main.rs
