[package]
name = "rust-prac"
version = "0.1.0"
authors = ["psyashes <43512814+psyashes@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
tokio = { version = "1.0.1", futures = ["macros"] }
